--- a/src/style/style.css
+++ b/src/style/style.css
@@ -49,11 +49,34 @@ body {
 .content .logo svg {
   height: inherit;
 }
+@media (max-width: 780px) {
+  .content .logo {
+    height: auto;
+    width: 90%;
+  }
+}
+@media (max-width: 400px) {
+  .content .logo {
+    margin: auto;
+    width: 100%;
+  }
+}
 .content .icons {
   margin-top: 5rem;
   display: grid;
   column-gap: 3rem;
   grid-template-columns: repeat(4, max-content);
+}
+@media (max-width: 780px) {
+  .content .icons {
+    margin-top: 3vh;
+  }
+}
+@media (max-width: 400px) {
+  .content .icons {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 .content .icons .icon-container {
   width: 6rem;
@@ -91,6 +114,12 @@ body {
   background-position: center;
   z-index: -1;
   filter: blur(0.3rem);
+  display: block;
+}
+@media (max-width: 1250px) {
+  .mountain {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
