--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -51,6 +51,17 @@ body {
         svg {
             height: inherit;
         }
+
+        @media(max-width: 780px) {
+            height: auto;
+            width: 90%;
+        }
+
+        @media(max-width: 400px) {
+            margin: auto;
+            width: 100%;
+        }
+
     }
 
     .icons {
@@ -58,6 +69,15 @@ body {
         display: grid;
         column-gap: 3rem;
         grid-template-columns: repeat(4, max-content);
+
+        @media(max-width: 780px) {
+            margin-top: 3vh;
+        }
+
+        @media(max-width: 400px) {
+            display: flex;
+            justify-content: space-around;
+        }
 
         .icon-container {
             width: 6rem;
@@ -102,4 +122,9 @@ body {
     background-position: center;
     z-index: -1;
     filter: blur(0.3rem);
+    display: block;
+
+    @media(max-width: 1250px) {
+        display: none;
+    }
 }
