--- a/src/style/style.css
+++ b/src/style/style.css
@@ -44,7 +44,7 @@ body {
   align-self: center;
 }
 .content .logo {
-  height: 20vh;
+  width: 42vw;
 }
 .content .logo svg {
   height: inherit;
@@ -62,7 +62,7 @@ body {
   }
 }
 .content .icons {
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: grid;
   column-gap: 3rem;
   grid-template-columns: repeat(4, max-content);
@@ -100,7 +100,7 @@ body {
   font-size: 3.5rem;
 }
 
-.mountain {
+.image {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -108,18 +108,37 @@ body {
   right: 0;
   top: 0;
   left: 0;
-  background-image: url(../assets/mountain.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  filter: blur(0.3rem);
   display: block;
+  z-index: -1;
+  mask: url(../assets/mask.png);
+  mask-size: 110vw 100vh;
+  mask-position: right;
+  background-repeat: no-repeat;
 }
 @media (max-width: 1250px) {
-  .mountain {
+  .image {
     display: none;
   }
+}
+.image#img1 {
+  background-image: url(../assets/img1.jpg);
+  background-position: 35vw 0;
+  background-size: cover;
+}
+.image#img2 {
+  background-image: url(../assets/img2.jpg);
+  background-position: 37vw 0;
+  background-size: cover;
+}
+.image#img3 {
+  background-image: url(../assets/img3.png);
+  background-size: 60vw auto;
+  background-position: right -20vw;
+}
+.image#img4 {
+  background-image: url(../assets/img4.jpg);
+  background-position: 30vw;
+  background-size: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
