--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,9 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;900&display=swap");
 :root {
-  --color-primary: #98C379;
-  --color-dark: #282C34;
-  --color-light: #cccccc;
-  --color-white: #ffffff;
-  --shadow: 0 0 1.5rem rgba(0, 0, 0, 0.15);
+  --shadow: 0 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
 }
 
 * {
@@ -20,7 +17,61 @@ html {
 body {
   width: 100vw;
   background-color: var(--color-white);
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+.landing-zone {
+  height: 100vh;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+.landing-zone__background-image {
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/mountain.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.2;
+  position: absolute;
+  z-index: -1;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+}
+.landing-zone__logo {
+  width: 50%;
+  height: 100%;
+  background-image: url(../assets/twentyfivesoftware-logo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.landing-zone__icon {
+  position: absolute;
+  top: 2rem;
+  left: 4rem;
+  width: 7rem;
+}
+.landing-zone__angle {
+  position: absolute;
+  left: 50%;
+  bottom: 10%;
+  font-size: 7rem;
+  text-decoration: none;
+  transform: translateX(-50%);
+  color: #484E60;
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translate(-50%, 0);
+  }
+  40% {
+    transform: translate(-50%, -3rem);
+  }
+  60% {
+    transform: translate(-50%, -1.5rem);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
