--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,10 +1,9 @@
-:root {
-    --color-primary: #98C379;
-    --color-dark: #282C34;
-    --color-light: #cccccc;
-    --color-white: #ffffff;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;900&display=swap');
 
-    --shadow: 0 0 1.5rem rgba(0, 0, 0, 0.15);
+:root {
+    //--color-button-landing-zone: #98C379; // #A1CF80
+
+    --shadow: 0 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
 }
 
 * {
@@ -21,5 +20,96 @@ html {
 body {
     width: 100vw;
     background-color: var(--color-white);
-    overflow: hidden;
+    overflow-x: hidden;
 }
+
+
+.landing-zone {
+    height: 100vh;
+    position: relative;
+    display: grid;
+    place-items: center;
+
+    &__background-image {
+        width: 100%;
+        height: 100%;
+        background-image: url(../assets/mountain.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: 0.2;
+        position: absolute;
+        z-index: -1;
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+    }
+
+    &__logo {
+        width: 50%;
+        height: 100%;
+        background-image: url(../assets/twentyfivesoftware-logo.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    &__icon {
+        position: absolute;
+        top: 2rem;
+        left: 4rem;
+        width: 7rem;
+    }
+
+    &__angle {
+        position: absolute;
+        left: 50%;
+        bottom: 10%;
+        font-size: 7rem;
+        text-decoration: none;
+        transform: translateX(-50%);
+        color: #484E60;
+        animation: bounce 2s infinite;
+    }
+
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translate(-50%, 0);
+        }
+        40% {
+            transform: translate(-50%, -3rem);
+        }
+        60% {
+            transform: translate(-50%, -1.5rem);
+        }
+    }
+}
+
+//.button {
+//    width: max-content;
+//    padding: 0.75rem 4rem;
+//    border-radius: 1.2rem;
+//    font-size: 2.5rem;
+//    text-decoration: none;
+//
+//    border: 0.4rem solid var(--color-button-landing-zone);
+//    color: var(--color-button-landing-zone);
+//    box-shadow: var(--shadow);
+//
+//    svg {
+//        margin-right: 1.5rem;
+//    }
+//
+//    &--bold {
+//        font-weight: 500;
+//    }
+//
+//    &--filled {
+//        background-color: var(--color-button-landing-zone);
+//        color: #fff;
+//    }
+//
+//}
+//
+//.empty-space {
+//    width: 5rem;
+//}
+//
