--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;900&display=swap");
 :root {
   --shadow: 0 0.3rem 1.5rem rgba(0, 0, 0, 0.15);
 }
@@ -72,6 +72,84 @@ body {
   60% {
     transform: translate(-50%, -1.5rem);
   }
+}
+
+.projects-zone {
+  padding: 8rem 5rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #484E60;
+}
+.projects-zone__title {
+  text-align: center;
+  font-weight: 900;
+  font-size: 5rem;
+  color: #ffffff;
+  letter-spacing: 0.15rem;
+  line-height: 1.2;
+}
+.projects-zone__subtitle {
+  text-align: center;
+  font-weight: 500;
+  color: #7680A2;
+  font-size: 2rem;
+}
+.projects-zone__list {
+  padding: 10rem 0;
+}
+
+.project {
+  display: grid;
+  grid-template-columns: 30rem max-content;
+  column-gap: 7rem;
+}
+.project__image {
+  background: linear-gradient(to bottom right, #FCB76B, #FB8080);
+  height: 20rem;
+  border-radius: 1.5rem;
+  display: grid;
+  place-items: center;
+  box-shadow: var(--shadow);
+  font-size: 7.5rem;
+  color: #ffffff;
+}
+.project__info {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+.project__name {
+  color: #ffffff;
+  font-size: 4rem;
+  font-weight: 700;
+}
+.project__description {
+  color: #EDEDED;
+  font-size: 2rem;
+}
+.project__buttons {
+  padding-top: 2rem;
+  display: flex;
+  justify-content: left;
+}
+
+.button {
+  width: max-content;
+  padding: 0.6rem 2rem 0.6rem 0;
+  border-radius: 1.2rem;
+  font-size: 1.8rem;
+  text-decoration: none;
+  margin-right: 2rem;
+  border: 0.3rem solid #FC9C76;
+  color: #FC9C76;
+}
+.button svg {
+  margin: 0 1.5rem;
+}
+.button--icon-right {
+  padding: 0.6rem 0 0.6rem 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
