--- a/src/style/style.css
+++ b/src/style/style.css
@@ -94,10 +94,10 @@ body {
   text-align: center;
   font-weight: 500;
   color: #7680A2;
-  font-size: 2rem;
+  font-size: 2.2rem;
 }
 .projects-zone__list {
-  padding: 10rem 0;
+  padding: 15rem 0 5rem 0;
 }
 
 .project {
@@ -122,7 +122,6 @@ body {
   display: flex;
   flex-direction: column;
   align-self: center;
-  max-width: 30vw;
 }
 .project__name {
   color: #ffffff;
@@ -134,6 +133,7 @@ body {
   font-size: 2rem;
   line-height: 1.1;
   padding: 0.15rem 0;
+  max-width: 30vw;
 }
 .project__buttons {
   padding-top: 2rem;
