--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -102,11 +102,11 @@ body {
         text-align: center;
         font-weight: 500;
         color: #7680A2;
-        font-size: 2rem;
+        font-size: 2.2rem;
     }
 
     &__list {
-        padding: 10rem 0;
+        padding: 15rem 0 5rem 0;
     }
 }
 
@@ -135,7 +135,6 @@ body {
         display: flex;
         flex-direction: column;
         align-self: center;
-        max-width: 30vw;
     }
 
     &__name {
@@ -149,6 +148,7 @@ body {
         font-size: 2rem;
         line-height: 1.1;
         padding: 0.15rem 0;
+        max-width: 30vw;
     }
 
     &__buttons {
