--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,6 +25,17 @@ body {
   position: relative;
   display: grid;
   place-items: center;
+  background-color: #484E60;
+}
+.landing-zone::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+  z-index: 1;
 }
 .landing-zone__background-image {
   width: 100%;
@@ -35,7 +46,7 @@ body {
   background-position: center;
   opacity: 0.2;
   position: absolute;
-  z-index: -1;
+  z-index: 2;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
 }
 .landing-zone__logo {
@@ -45,12 +56,14 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  z-index: 3;
 }
 .landing-zone__icon {
   position: absolute;
   top: 2rem;
   left: 4rem;
   width: 7rem;
+  z-index: 3;
 }
 .landing-zone__angle {
   position: absolute;
@@ -61,6 +74,7 @@ body {
   transform: translateX(-50%);
   color: #484E60;
   animation: bounce 2s infinite;
+  z-index: 3;
 }
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -96,8 +110,12 @@ body {
   color: #7680A2;
   font-size: 2.2rem;
 }
+.projects-zone__subtitle a {
+  text-decoration: none;
+  color: inherit;
+}
 .projects-zone__list {
-  padding: 15rem 0 5rem 0;
+  padding-top: 10rem;
 }
 
 .project {
