--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -27,6 +27,18 @@ body {
     position: relative;
     display: grid;
     place-items: center;
+    background-color: #484E60;
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+        z-index: 1;
+    }
 
     &__background-image {
         width: 100%;
@@ -37,7 +49,7 @@ body {
         background-position: center;
         opacity: 0.2;
         position: absolute;
-        z-index: -1;
+        z-index: 2;
         clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     }
 
@@ -48,6 +60,7 @@ body {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
+        z-index: 3;
     }
 
     &__icon {
@@ -55,6 +68,7 @@ body {
         top: 2rem;
         left: 4rem;
         width: 7rem;
+        z-index: 3;
     }
 
     &__angle {
@@ -66,6 +80,7 @@ body {
         transform: translateX(-50%);
         color: #484E60;
         animation: bounce 2s infinite;
+        z-index: 3;
     }
 
     @keyframes bounce {
@@ -103,10 +118,15 @@ body {
         font-weight: 500;
         color: #7680A2;
         font-size: 2.2rem;
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
     }
 
     &__list {
-        padding: 15rem 0 5rem 0;
+        padding-top: 10rem;
     }
 }
 
