--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,6 +12,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -75,6 +76,7 @@ body {
   color: #484E60;
   animation: bounce 2s infinite;
   z-index: 3;
+  outline: none;
 }
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
