--- a/src/style/style.css
+++ b/src/style/style.css
@@ -162,17 +162,11 @@ body {
 }
 
 .footer {
-  height: 8rem;
+  height: 11rem;
   background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.footer a {
-  font-size: 4rem;
-  text-decoration: none;
-  color: #484E60;
-  margin: 0 2rem;
 }
 
 .button {
@@ -189,6 +183,42 @@ body {
 }
 .button--icon-right {
   padding: 0.6rem 0 0.6rem 2rem;
+}
+
+.social-button {
+  font-size: 4rem;
+  text-decoration: none;
+  color: #484E60;
+  margin: 0 2rem;
+  transition: 0.4s linear;
+  position: relative;
+  width: 7rem;
+  height: 7rem;
+  display: grid;
+  place-items: center;
+}
+.social-button::before, .social-button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transition: 0.4s linear;
+  box-sizing: border-box;
+}
+.social-button:hover {
+  transform: scale(0.8);
+}
+.social-button:hover::before {
+  border-left: 0.4rem solid #484E60;
+  border-right: 0.4rem solid #484E60;
+  transform: skewX(20deg);
+}
+.social-button:hover::after {
+  border-top: 0.4rem solid #484E60;
+  border-bottom: 0.4rem solid #484E60;
+  transform: skewY(-20deg);
 }
 
 /*# sourceMappingURL=style.css.map */
