--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -181,18 +181,11 @@ body {
 }
 
 .footer {
-    height: 8rem;
+    height: 11rem;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    a {
-        font-size: 4rem;
-        text-decoration: none;
-        color: #484E60;
-        margin: 0 2rem;
-    }
 }
 
 .button {
@@ -213,4 +206,46 @@ body {
     &--icon-right {
         padding: 0.6rem 0 0.6rem 2rem;
     }
+}
+
+.social-button {
+    font-size: 4rem;
+    text-decoration: none;
+    color: #484E60;
+    margin: 0 2rem;
+    transition: .4s linear;
+    position: relative;
+    width: 7rem;
+    height: 7rem;
+    display: grid;
+    place-items: center;
+
+    &::before, &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        transition: .4s linear;
+        box-sizing: border-box;
+    }
+
+    &:hover {
+        transform: scale(0.8);
+
+        &::before {
+            border-left: 0.4rem solid #484E60;
+            border-right: 0.4rem solid #484E60;
+            transform: skewX(20deg);
+        }
+
+        &::after {
+            border-top: 0.4rem solid #484E60;
+            border-bottom: 0.4rem solid #484E60;
+            transform: skewY(-20deg);
+        }
+    }
+
+
 }
