--- a/src/style/style.css
+++ b/src/style/style.css
@@ -50,14 +50,29 @@ body {
   z-index: 2;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
 }
+.landing-zone__overlay {
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 70vh;
+}
+.landing-zone__social-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4rem;
+}
 .landing-zone__logo {
   width: 50%;
   height: 100%;
   background-image: url(../assets/twentyfivesoftware-logo.png);
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
-  z-index: 3;
+  background-position: center bottom;
 }
 .landing-zone__icon {
   position: absolute;
