--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -54,14 +54,31 @@ body {
         clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     }
 
+    &__overlay {
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+        margin-bottom: 70vh;
+    }
+
+    &__social-buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 4rem;
+    }
+
     &__logo {
         width: 50%;
         height: 100%;
         background-image: url(../assets/twentyfivesoftware-logo.png);
         background-size: contain;
         background-repeat: no-repeat;
-        background-position: center;
-        z-index: 3;
+        background-position: center bottom;
     }
 
     &__icon {
