--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,11 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
   z-index: 1;
 }
+@media (max-width: 500px) {
+  .landing-zone::before {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 95%, 0 90%);
+  }
+}
 .landing-zone__background-image {
   width: 100%;
   height: 100%;
@@ -49,6 +54,11 @@ body {
   position: absolute;
   z-index: 2;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+}
+@media (max-width: 500px) {
+  .landing-zone__background-image {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 95%, 0 90%);
+  }
 }
 .landing-zone__overlay {
   z-index: 3;
@@ -73,6 +83,21 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center bottom;
+}
+@media (max-width: 1200px) {
+  .landing-zone__logo {
+    width: 60%;
+  }
+}
+@media (max-width: 900px) {
+  .landing-zone__logo {
+    width: 70%;
+  }
+}
+@media (max-width: 700px) {
+  .landing-zone__logo {
+    width: 80%;
+  }
 }
 .landing-zone__icon {
   position: absolute;
@@ -126,6 +151,13 @@ body {
   font-weight: 500;
   color: #7680A2;
   font-size: 2.2rem;
+  line-height: 1;
+  margin-top: 0.5rem;
+}
+@media (max-width: 750px) {
+  .projects-zone__subtitle {
+    max-width: 75vw;
+  }
 }
 .projects-zone__subtitle a {
   text-decoration: none;
@@ -141,8 +173,31 @@ body {
   column-gap: 7rem;
   margin-bottom: 7rem;
 }
-.project:nth-child(even) {
-  margin-left: 10%;
+@media (min-width: 1100px) {
+  .project:nth-child(even) {
+    margin-left: 10%;
+  }
+}
+@media (max-width: 1000px) {
+  .project {
+    column-gap: 5rem;
+  }
+}
+@media (max-width: 900px) {
+  .project {
+    grid-template-columns: 20rem 1fr;
+  }
+}
+@media (max-width: 750px) {
+  .project {
+    grid-template-columns: 10rem 1fr;
+    column-gap: 3rem;
+  }
+}
+@media (max-width: 650px) {
+  .project {
+    grid-template-columns: 1fr;
+  }
 }
 .project__image {
   height: 20rem;
@@ -152,6 +207,26 @@ body {
   box-shadow: var(--shadow);
   font-size: 7.5rem;
   color: #ffffff;
+}
+@media (max-width: 750px) {
+  .project__image {
+    height: 10rem;
+    font-size: 4rem;
+  }
+}
+@media (max-width: 650px) {
+  .project__image {
+    width: 7rem;
+    height: 7rem;
+    margin-bottom: 2rem;
+    font-size: 3rem;
+  }
+}
+@media (max-width: 550px) {
+  .project__image {
+    justify-self: center;
+    margin-bottom: 1rem;
+  }
 }
 .project__info {
   display: flex;
@@ -163,6 +238,11 @@ body {
   font-size: 4rem;
   font-weight: 700;
 }
+@media (max-width: 550px) {
+  .project__name {
+    text-align: center;
+  }
+}
 .project__description {
   color: #EDEDED;
   font-size: 2rem;
@@ -170,10 +250,27 @@ body {
   padding: 0.15rem 0;
   max-width: 30vw;
 }
+@media (max-width: 1000px) {
+  .project__description {
+    max-width: 50vw;
+  }
+}
+@media (max-width: 550px) {
+  .project__description {
+    max-width: unset;
+    text-align: center;
+  }
+}
 .project__buttons {
   padding-top: 2rem;
   display: flex;
   justify-content: left;
+}
+@media (max-width: 550px) {
+  .project__buttons {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .footer {
@@ -192,6 +289,12 @@ body {
   text-decoration: none;
   margin-right: 2rem;
   border: 0.3rem solid;
+}
+@media (max-width: 550px) {
+  .button {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
 }
 .button svg {
   margin: 0 1.5rem;
@@ -234,6 +337,11 @@ body {
   border-top: 0.4rem solid #484E60;
   border-bottom: 0.4rem solid #484E60;
   transform: skewY(-20deg);
+}
+@media (max-width: 550px) {
+  .social-button {
+    margin: 0 1rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
