--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -39,6 +39,10 @@ body {
         background-color: #ffffff;
         clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
         z-index: 1;
+
+        @media (max-width: 500px) {
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 95%, 0 90%);
+        }
     }
 
     &__background-image {
@@ -52,6 +56,10 @@ body {
         position: absolute;
         z-index: 2;
         clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
+
+        @media (max-width: 500px) {
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 95%, 0 90%);
+        }
     }
 
     &__overlay {
@@ -79,6 +87,18 @@ body {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center bottom;
+
+        @media (max-width: 1200px) {
+            width: 60%;
+        }
+
+        @media (max-width: 900px) {
+            width: 70%;
+        }
+
+        @media (max-width: 700px) {
+            width: 80%;
+        }
     }
 
     &__icon {
@@ -137,6 +157,12 @@ body {
         font-weight: 500;
         color: #7680A2;
         font-size: 2.2rem;
+        line-height: 1;
+        margin-top: 0.5rem;
+
+        @media (max-width: 750px) {
+            max-width: 75vw;
+        }
 
         a {
             text-decoration: none;
@@ -155,12 +181,30 @@ body {
     column-gap: 7rem;
     margin-bottom: 7rem;
 
-    &:nth-child(even) {
-        margin-left: 10%;
+    @media (min-width: 1100px) {
+        &:nth-child(even) {
+            margin-left: 10%;
+        }
+    }
+
+    @media (max-width: 1000px) {
+        column-gap: 5rem;
+    }
+
+    @media (max-width: 900px) {
+        grid-template-columns: 20rem 1fr;
+    }
+
+    @media (max-width: 750px) {
+        grid-template-columns: 10rem 1fr;
+        column-gap: 3rem;
+    }
+
+    @media (max-width: 650px) {
+        grid-template-columns: 1fr;
     }
 
     &__image {
-        //background: linear-gradient(to bottom right, #FCB76B, #FB8080);
         height: 20rem;
         border-radius: 1.5rem;
         display: grid;
@@ -168,6 +212,23 @@ body {
         box-shadow: var(--shadow);
         font-size: 7.5rem;
         color: #ffffff;
+
+        @media (max-width: 750px) {
+            height: 10rem;
+            font-size: 4rem;
+        }
+
+        @media (max-width: 650px) {
+            width: 7rem;
+            height: 7rem;
+            margin-bottom: 2rem;
+            font-size: 3rem;
+        }
+
+        @media (max-width: 550px) {
+            justify-self: center;
+            margin-bottom: 1rem;
+        }
     }
 
     &__info {
@@ -180,6 +241,10 @@ body {
         color: #ffffff;
         font-size: 4rem;
         font-weight: 700;
+
+        @media (max-width: 550px) {
+            text-align: center;
+        }
     }
 
     &__description {
@@ -188,12 +253,26 @@ body {
         line-height: 1.1;
         padding: 0.15rem 0;
         max-width: 30vw;
+
+        @media (max-width: 1000px) {
+            max-width: 50vw;
+        }
+
+        @media (max-width: 550px) {
+            max-width: unset;
+            text-align: center;
+        }
     }
 
     &__buttons {
         padding-top: 2rem;
         display: flex;
         justify-content: left;
+
+        @media (max-width: 550px) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
 
@@ -215,6 +294,11 @@ body {
 
     border: 0.3rem solid;
     //color: #FC9C76;
+
+    @media (max-width: 550px) {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
 
     svg {
         margin: 0 1.5rem;
@@ -264,5 +348,8 @@ body {
         }
     }
 
+    @media (max-width: 550px) {
+        margin: 0 1rem;
+    }
 
 }
