--- a/src/style/style.css
+++ b/src/style/style.css
@@ -46,7 +46,7 @@ body {
 .landing-zone__background-image {
   width: 100%;
   height: 100%;
-  background-image: url(../assets/mountain.png);
+  background-image: url(../assets/mountain.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -149,7 +149,7 @@ body {
 .projects-zone__subtitle {
   text-align: center;
   font-weight: 500;
-  color: #7680A2;
+  color: #bdbfc7;
   font-size: 2.2rem;
   line-height: 1;
   margin-top: 0.5rem;
