--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -48,7 +48,7 @@ body {
     &__background-image {
         width: 100%;
         height: 100%;
-        background-image: url(../assets/mountain.png);
+        background-image: url(../assets/mountain.webp);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -155,7 +155,7 @@ body {
     &__subtitle {
         text-align: center;
         font-weight: 500;
-        color: #7680A2;
+        color: #bdbfc7;
         font-size: 2.2rem;
         line-height: 1;
         margin-top: 0.5rem;
