Updated projects list.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -207,6 +207,7 @@ body {
   box-shadow: var(--shadow);
   font-size: 7.5rem;
   color: #ffffff;
+  user-select: none;
 }
 @media (max-width: 750px) {
   .project__image {
