--- a/src/style/style.css
+++ b/src/style/style.css
@@ -242,6 +242,8 @@ body {
 @media (max-width: 550px) {
   .project__name {
     text-align: center;
+    line-height: 1;
+    margin: 1rem 0;
   }
 }
 .project__description {
@@ -280,6 +282,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 550px) {
+  .footer {
+    height: 8rem;
+  }
 }
 
 .button {
@@ -342,6 +349,7 @@ body {
 @media (max-width: 550px) {
   .social-button {
     margin: 0 1rem;
+    font-size: 3rem;
   }
 }
 
