--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -1,12 +1,14 @@
 .button {
     width: max-content;
-    padding: 0.6rem 2rem 0.6rem 0;
+    padding: 0.8rem 2rem 0.8rem 0;
     border-radius: 1.2rem;
     font-size: 1.8rem;
     text-decoration: none;
     margin-right: 2rem;
     border: 0.3rem solid;
     user-select: none;
+    display: flex;
+    align-items: center;
 
     @media (max-width: 550px) {
         margin-right: 0;
@@ -21,5 +23,5 @@
 .button__iconRight {
     @extend .button;
 
-    padding: 0.6rem 0 0.6rem 2rem;
+    padding: 0.8rem 0 0.8rem 2rem;
 }
